fix(monolith): Created a generic CRUD repo. Fixing Users and Auth services.
